--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ notifications:
   email: false
 
 before_script:
-  - (cd src/main && make install)
+  - (cd src/main && make deps)
 
 # TODO lint
 script:
