new cli option `log-level` which controls the level of logging. defaults to info  improve logging

--- a/test/e2e/haproxy/haproxy.cfg
+++ b/test/e2e/haproxy/haproxy.cfg
@@ -19,6 +19,13 @@ defaults
     timeout client  5m
     timeout server  15m
 
+    unique-id-format  %{+X}o\ %pid%ci%cp%fi%fp%Ts%ms%rt
+    unique-id-header X-Request-Id
+
+    # the default httplog form should be:
+    # %ci:%cp [%tr] %ft %b/%s %TR/%Tw/%Tc/%Tr/%Ta %ST %B %CC %CS %tsc %ac/%fc/%bc/%sc/%rc %sq/%bq %hr %hs %{+Q}r
+    log-format "%ci:%cp [%tr] %ft %b/%s %TR/%Tw/%Tc/%Tr/%Ta %ST %B %CC %CS %tsc %ac/%fc/%bc/%sc/%rc %sq/%bq %hr %hs %{+Q}r %ID"
+
 
 frontend "${E2E_WEBSITE_BUCKET}"
     bind *:80
